--- a/EnsoniqAudioPCI/trunk/Info.plist
+++ b/EnsoniqAudioPCI/trunk/Info.plist
@@ -42,6 +42,18 @@
 		<string>1.0.0</string>
 		<key>com.apple.iokit.IOPCIFamily</key>
 		<string>1.1</string>
+		<key>com.apple.iokit.IOAudioFamily</key>
+		<string>1.1fc9</string>
+		<key>com.apple.kpi.bsd</key>
+		<string>8.0.0</string>
+ 		<key>com.apple.kpi.iokit</key>
+		<string>8.0.0</string>
+		<key>com.apple.kpi.libkern</key>
+		<string>8.0.0</string>
+		<key>com.apple.kpi.mach</key>
+		<string>8.0.0</string>
+		<key>com.apple.kpi.unsupported</key>
+		<string>8.0.0</string>
 	</dict>
 </dict>
 </plist>
