--- a/EnsoniqAudioPCI/trunk/Info-Ensoniq.plist
+++ b/EnsoniqAudioPCI/trunk/Info-Ensoniq.plist
@@ -32,10 +32,14 @@
 			<integer>100</integer>
 			<key>IOProviderClass</key>
 			<string>IOPCIDevice</string>
+			<key>IOAudioEngineDescription</key>
+			<string>${ENGINE_DESCRIPTION}</string>
+			<key>IOAudioEngineCoreAudioPlugIn</key>
+			<string>${COREAUDIO_PLUGIN_PATH}</string>
 		</dict>
 	</dict>
 	<key>OSBundleCompatibleVersion</key>
-	<string>1.0.0</string>
+	<string>${DYLIB_COMPATIBILITY_VERSION}</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.driver.AppleAC97Audio</key>
