Added some properties
git-svn-id: https://svn.code.sf.net/p/vmsvga2/code@58 f31ded45-fcaa-4108-8aac-ff0a0b8cda5a

--- a/VMsvga2/trunk/Info-FB.plist
+++ b/VMsvga2/trunk/Info-FB.plist
@@ -38,6 +38,8 @@
 			<string>VMsvga2Client</string>
 			<key>IOSourceVersion</key>
 			<string>1.0.0.0</string>
+			<key>IOHardwareModel</key>
+			<string>VMware SVGA II</string>
 		</dict>
 	</dict>
 	<key>OSBundleCompatibleVersion</key>
