Tweak project file
git-svn-id: https://svn.code.sf.net/p/vmsvga2/code@74 f31ded45-fcaa-4108-8aac-ff0a0b8cda5a

--- a/EnsoniqAudioPCI/trunk/Generic.xcconfig
+++ b/EnsoniqAudioPCI/trunk/Generic.xcconfig
@@ -5,6 +5,7 @@
 //  Copyright 2009 Zenith432. All rights reserved.
 //
 
+ALWAYS_SEARCH_USER_PATHS = NO;
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym;
 DEPLOYMENT_POSTPROCESSING = YES;
 GCC_ENABLE_CPP_EXCEPTIONS = NO;
