--- a/VMsvga2/trunk/Generic.xcconfig
+++ b/VMsvga2/trunk/Generic.xcconfig
@@ -5,6 +5,7 @@
 //  Copyright 2009 Zenith432. All rights reserved.
 //
 
+ALWAYS_SEARCH_USER_PATHS = NO;
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym;
 DEPLOYMENT_POSTPROCESSING = YES;
 GCC_ENABLE_CPP_EXCEPTIONS = NO;
