Added versioning and copyright
git-svn-id: https://svn.code.sf.net/p/vmsvga2/code@80 f31ded45-fcaa-4108-8aac-ff0a0b8cda5a

--- a/VMsvga2/trunk/Info-AC.plist
+++ b/VMsvga2/trunk/Info-AC.plist
@@ -43,6 +43,8 @@
 			<string>1.0.0.0</string>
 		</dict>
 	</dict>
+	<key>NSHumanReadableCopyright</key>
+	<string>${COPYRIGHT_NOTICE}</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>${DYLIB_COMPATIBILITY_VERSION}</string>
 	<key>OSBundleLibraries</key>
