--- a/VMsvga2/trunk/Info-FB.plist
+++ b/VMsvga2/trunk/Info-FB.plist
@@ -42,6 +42,8 @@
 			<string>VMware SVGA II</string>
 		</dict>
 	</dict>
+	<key>NSHumanReadableCopyright</key>
+	<string>${COPYRIGHT_NOTICE}</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>${DYLIB_COMPATIBILITY_VERSION}</string>
 	<key>OSBundleLibraries</key>
