--- a/VMsvga2/trunk/Info-GLD.plist
+++ b/VMsvga2/trunk/Info-GLD.plist
@@ -18,5 +18,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>${MODULE_VERSION}</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>${COPYRIGHT_NOTICE}</string>
 </dict>
 </plist>
