Copyright notice, versioning, symbol hiding
git-svn-id: https://svn.code.sf.net/p/vmsvga2/code@86 f31ded45-fcaa-4108-8aac-ff0a0b8cda5a

--- a/EnsoniqAudioPCI/trunk/Info-Ensoniq.plist
+++ b/EnsoniqAudioPCI/trunk/Info-Ensoniq.plist
@@ -38,6 +38,8 @@
 			<string>${COREAUDIO_PLUGIN_PATH}</string>
 		</dict>
 	</dict>
+	<key>NSHumanReadableCopyright</key>
+	<string>${COPYRIGHT_NOTICE}</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>${DYLIB_COMPATIBILITY_VERSION}</string>
 	<key>OSBundleLibraries</key>
@@ -48,15 +50,11 @@
 		<string>1.1</string>
 		<key>com.apple.iokit.IOAudioFamily</key>
 		<string>1.1fc9</string>
-		<key>com.apple.kpi.bsd</key>
-		<string>8.0.0</string>
  		<key>com.apple.kpi.iokit</key>
 		<string>8.0.0</string>
 		<key>com.apple.kpi.libkern</key>
 		<string>8.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>8.0.0</string>
-		<key>com.apple.kpi.unsupported</key>
 		<string>8.0.0</string>
 	</dict>
 </dict>
