Trimmed build targets
git-svn-id: https://svn.code.sf.net/p/vmsvga2/code@87 f31ded45-fcaa-4108-8aac-ff0a0b8cda5a

--- a/EnsoniqAudioPCI/trunk/Info-Ensoniq.plist
+++ b/EnsoniqAudioPCI/trunk/Info-Ensoniq.plist
@@ -34,8 +34,10 @@
 			<string>IOPCIDevice</string>
 			<key>IOAudioEngineDescription</key>
 			<string>${ENGINE_DESCRIPTION}</string>
+#ifdef LINK_PLUGIN
 			<key>IOAudioEngineCoreAudioPlugIn</key>
 			<string>${COREAUDIO_PLUGIN_PATH}</string>
+#endif
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
