Upgrade to Xcode 4.1/OS 10.7
git-svn-id: https://svn.code.sf.net/p/vmsvga2/code@115 f31ded45-fcaa-4108-8aac-ff0a0b8cda5a

--- a/EnsoniqAudioPCI/trunk/Generic.xcconfig
+++ b/EnsoniqAudioPCI/trunk/Generic.xcconfig
@@ -2,7 +2,7 @@
 //  Generic.xcconfig
 //
 //  Created by Zenith432 on November 18th 2009.
-//  Copyright 2009 Zenith432. All rights reserved.
+//  Copyright 2009-2011 Zenith432. All rights reserved.
 //
 
 ALWAYS_SEARCH_USER_PATHS = NO;
@@ -16,4 +16,3 @@ GCC_WARN_ABOUT_RETURN_TYPE = YES;
 GCC_WARN_SIGN_COMPARE = YES;
 GCC_WARN_UNINITIALIZED_AUTOS = YES;
 GCC_WARN_UNUSED_VARIABLE = YES;
-PREBINDING = NO;
