Migrate to Xcode 4.5, SDK 10.8
git-svn-id: https://svn.code.sf.net/p/vmsvga2/code@151 f31ded45-fcaa-4108-8aac-ff0a0b8cda5a

--- a/VMsvga2/trunk/Generic.xcconfig
+++ b/VMsvga2/trunk/Generic.xcconfig
@@ -2,10 +2,11 @@
 //  Generic.xcconfig
 //
 //  Created by Zenith432 on November 18th 2009.
-//  Copyright 2009-2011 Zenith432. All rights reserved.
+//  Copyright 2009-2012 Zenith432. All rights reserved.
 //
 
 ALWAYS_SEARCH_USER_PATHS = NO;
+COMBINE_HIDPI_IMAGES = YES;
 DEBUG_INFORMATION_FORMAT = dwarf-with-dsym;
 DEPLOYMENT_POSTPROCESSING = YES;
 GCC_ENABLE_CPP_EXCEPTIONS = NO;
